--- a/LifeOnABox/LifeOnABox.vcxproj
+++ b/LifeOnABox/LifeOnABox.vcxproj
@@ -78,7 +78,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="controls.cpp" />
+    <ClCompile Include="generateWorld.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="render.cpp" />
+    <ClCompile Include="topFunctions.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="controls.h" />
+    <ClInclude Include="generateWorld.h" />
+    <ClInclude Include="render.h" />
+    <ClInclude Include="structs.h" />
+    <ClInclude Include="topFunctions.h" />
+    <ClInclude Include="variables.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
