--- a/LifeOnABox/LifeOnABox.vcxproj
+++ b/LifeOnABox/LifeOnABox.vcxproj
@@ -92,6 +92,9 @@
     <ClInclude Include="topFunctions.h" />
     <ClInclude Include="variables.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="ToDo.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
