--- a/LifeOnABox/LifeOnABox.vcxproj.filters
+++ b/LifeOnABox/LifeOnABox.vcxproj.filters
@@ -41,6 +41,9 @@
     <ClInclude Include="namespaceDec.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="collisionDetection.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="ToDo.txt">
