--- a/LifeOnABox/LifeOnABox.vcxproj
+++ b/LifeOnABox/LifeOnABox.vcxproj
@@ -83,6 +83,7 @@
   <ItemGroup>
     <ClInclude Include="collisionDetection.h" />
     <ClInclude Include="controls.h" />
+    <ClInclude Include="font.h" />
     <ClInclude Include="generateWorld.h" />
     <ClInclude Include="render.h" />
     <ClInclude Include="structs.h" />
