--- a/LifeOnABox/LifeOnABox.vcxproj
+++ b/LifeOnABox/LifeOnABox.vcxproj
@@ -83,6 +83,7 @@
   <ItemGroup>
     <ClInclude Include="collisionDetection.h" />
     <ClInclude Include="controls.h" />
+    <ClInclude Include="fileManagement.h" />
     <ClInclude Include="font.h" />
     <ClInclude Include="generateWorld.h" />
     <ClInclude Include="render.h" />
@@ -92,6 +93,7 @@
     <ClInclude Include="namespaceDec.h" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="Functions.txt" />
     <Text Include="ToDo.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
